--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -17,7 +17,7 @@ icon = "brand-github"
 
 [[social]]
 identifier = "twitter"
-name = "Twitter"
+name = "Linkedin"
 url = "https://twitter.com"
 
 [social.params]
